web-cam enabled

--- a/JupCV/Jup.ipynb
+++ b/JupCV/Jup.ipynb
@@ -2,12 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "\n"
+    "\n",
+    "cam = cv2.VideoCapture(0)\n",
+    "# Подключаемся к камере\n",
+    "if not cam.isOpened():\n",
+    "    print(\"Не удалось открыть камеру\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "# Захват кадра\n",
+    "    ret, frame = cam.read()\n",
+    "    if not ret:\n",
+    "        print(\"Кадр не получен\")\n",
+    "        break\n",
+    "\n",
+    "    cv2.imshow(\"frame\", frame)\n",
+    "\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "# Освобождение ресурсов\n",
+    "cam.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   }
  ],
