--- a/Yolo_bottle/inference.ipynb
+++ b/Yolo_bottle/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "while True:\n",
     "    ret, frame = cam.read()\n",
     "\n",
-    "    results = model.track(frame, iou=0.4, conf=0.5, persist=True, imgsz=608, verbose=False, tracker=\"botsort.yaml\")\n",
+    "    results = model.track(frame, iou=0.4, conf=0.5, persist=True, imgsz=608, verbose=False, tracker=\"C:/Users/khari/GitReps/PromatisLib-1/Yolo_bottle/botsort.yaml\")\n",
     "\n",
     "    if results[0].boxes.id != None: # this will ensure that id is not None -> exist tracks\n",
     "        boxes = results[0].boxes.xyxy.cpu().numpy().astype(int)\n",
